# baremetalbuzzer

./: .gitpod.Dockerfile  Cargo.toml
.devcontainer/: devcontainer.json
docs/: README.md
scripts/: flash.sh  run-wokwi.sh
src/: main.rs
